--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "element-plus": "^2.7.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -20,9 +22,12 @@
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
+    "fast-glob": "^3.3.2",
+    "less": "^4.2.0",
     "npm-run-all2": "^6.1.2",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.11"
   }
 }
